# src/routes/anuncioRoutes.ts
@@ -5,6 +5,7 @@ import {
   getAnunciosUsuario,
 	getAnuncio,
   deleteAnuncio,
+  editAnuncio,
 } from '../controllers/anuncioController';
 import multer from 'multer';
 import jwtAuthMiddleware from '../middleware/jwtAuth';
@@ -16,6 +17,7 @@ router.get('/', getAnuncios);
 router.get('/user/:nombreUsuario', getAnunciosUsuario);
 router.post('/item/:slug', getAnuncio);
 router.delete('/delete/:anuncioId', jwtAuthMiddleware, deleteAnuncio);
+router.put('/item/:id', jwtAuthMiddleware, editAnuncio);
 router.post('/upload', upload.array('imagenes'), uploadImages);
 
 export default router;
